--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+text-align: center;
+}
+#featured-property {
+text-align: center;
+}
+ a {
+text-align: center;
+padding-left: 10px;
+padding-right: 10px;
+background-color: rgb(185, 179, 179);
+}
